# GFS_PYTHON

./: generate_proto.py  pyproject.toml  test  usage_test.py
src/pygfs/: __init__.py  client.py  utils.py
src/pygfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pygfs/grpc_gen/: __init__.py  helloworld_pb2_grpc.py
